force-app/main/default/objects/Income_Evidence__c/Income_Evidence__c.object-meta.xml
<CustomObject>
    <label>Income Evidence</label>
    <nameField>
        <displayFormat>IE-{0000}</displayFormat>
        <label>Income Evidence Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income Evidence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>