force-app/main/default/objects/Income_Evidence__c/fields/Employment_Detail__c.field-meta.xml
<CustomField>
    <fullName>Employment_Detail__c</fullName>
    <label>Employment Detail</label>
    <referenceTo>Employment_Detail__c</referenceTo>
    <relationshipLabel>Income Evidence</relationshipLabel>
    <relationshipName>Income_Evidence</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>