force-app/main/default/objects/Income_Evidence__c/fields/Pay_date__c.field-meta.xml
<CustomField>
    <fullName>Pay_date__c</fullName>
    <label>Pay date</label>
    <type>Date</type>
</CustomField>